--- a/tests/liblockfile/CMakeLists.txt
+++ b/tests/liblockfile/CMakeLists.txt
@@ -4,6 +4,6 @@ include_directories(${PROJECT_SOURCE_DIR}/src/liblockfile)
 
 add_executable(liblockfile_tests_runner ${TEST_LIBLOCKFILE_SOURCES})
 
-target_link_libraries(liblockfile_tests_runner PRIVATE liblockfile gtest)
+target_link_libraries(liblockfile_tests_runner PRIVATE liblockfile gtest gmock yaml-cpp)
 
 add_test(NAME tests_liblockfile COMMAND liblockfile_tests_runner)
