Prepare machinery for proper parsing of yaml files

--- a/tests/liblockfile/CMakeLists.txt
+++ b/tests/liblockfile/CMakeLists.txt
@@ -1,5 +1,6 @@
 file(GLOB_RECURSE TEST_LIBLOCKFILE_SOURCES *.cpp)
 
+include_directories(${PROJECT_SOURCE_DIR}/include/liblockfile)
 include_directories(${PROJECT_SOURCE_DIR}/src/liblockfile)
 
 add_executable(liblockfile_tests_runner ${TEST_LIBLOCKFILE_SOURCES})
