Parsing individual components of the lock file yaml

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,4 @@ file(GLOB_RECURSE LIBLOCKFILE_SOURCES *.cpp)
 
 include_directories(.)
 
-add_library(liblockfile SHARED ${LIBLOCKFILE_SOURCES})
+add_library(lockfile SHARED ${LIBLOCKFILE_SOURCES})
