--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,4 +5,14 @@ endif()
 pkg_check_modules(gtest REQUIRED)
 enable_testing()
 
-add_subdirectory(liblockfile)
+file(GLOB_RECURSE TEST_LIBLOCKFILE_SOURCES *.cpp)
+
+include_directories(.)
+include_directories(${PROJECT_SOURCE_DIR}/include)
+include_directories(${PROJECT_SOURCE_DIR}/src)
+
+add_executable(liblockfile_tests_runner ${TEST_LIBLOCKFILE_SOURCES})
+
+target_link_libraries(liblockfile_tests_runner PRIVATE lockfile gtest gmock yaml-cpp)
+
+add_test(NAME tests_liblockfile COMMAND liblockfile_tests_runner)
