Prepare user API
This wrapping API should be much easier to modify without introducing ABI incompatibilities.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 file(GLOB_RECURSE LIBLOCKFILE_SOURCES *.cpp)
 
+include_directories(./api)
 include_directories(./impl)
 
 add_library(lockfile SHARED ${LIBLOCKFILE_SOURCES})
