--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,7 +7,9 @@ enable_testing()
 
 file(GLOB_RECURSE TEST_LIBLOCKFILE_SOURCES *.cpp)
 
-include_directories(.)
+include_directories(./api)
+include_directories(./impl)
+include_directories(${PROJECT_SOURCE_DIR}/include)
 include_directories(${PROJECT_SOURCE_DIR}/src/impl)
 
 add_executable(liblockfile_tests_runner ${TEST_LIBLOCKFILE_SOURCES})
