Fix linking issues, produce pkg config file, setup project version correctly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 
 include(VERSION.cmake)
 
-project(liblockfile LANGUAGES CXX)
+project(liblockfile LANGUAGES CXX VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -12,7 +12,7 @@ option(WITH_DOCS "Build documentation" ON)
 option(WITH_PYTHON "Build Python bindings" ON)
 
 find_package(PkgConfig REQUIRED)
-pkg_check_modules(yaml-cpp REQUIRED)
+pkg_check_modules(YAMLCPP REQUIRED yaml-cpp)
 
 add_compile_options(-Wall -Wextra -Werror)
 
