--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,7 +2,7 @@ if(NOT WITH_TESTS)
     return()
 endif()
 
-pkg_check_modules(gtest REQUIRED)
+pkg_check_modules(GTEST REQUIRED gtest)
 enable_testing()
 
 file(GLOB_RECURSE TEST_LIBLOCKFILE_SOURCES *.cpp)
@@ -14,6 +14,6 @@ include_directories(${PROJECT_SOURCE_DIR}/src/impl)
 
 add_executable(liblockfile_tests_runner ${TEST_LIBLOCKFILE_SOURCES})
 
-target_link_libraries(liblockfile_tests_runner PRIVATE lockfile gtest gmock yaml-cpp)
+target_link_libraries(liblockfile_tests_runner PRIVATE liblockfile gtest gmock yaml-cpp)
 
 add_test(NAME tests_liblockfile COMMAND liblockfile_tests_runner)
