Initial version of spec file

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,6 +3,7 @@ if(NOT WITH_TESTS)
 endif()
 
 pkg_check_modules(GTEST REQUIRED gtest)
+pkg_check_modules(GMOCK REQUIRED gmock)
 enable_testing()
 
 file(GLOB_RECURSE TEST_LIBLOCKFILE_SOURCES *.cpp)
