--- a/test/python/libpkgmanifest/CMakeLists.txt
+++ b/test/python/libpkgmanifest/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_test(NAME test_python_libpkgmanifest COMMAND ${Python3_EXECUTABLE} -m unittest WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
+add_test(NAME test_python_libpkgmanifest COMMAND ${Python3_EXECUTABLE} -m unittest --verbose WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
 
 set_property(TEST test_python_libpkgmanifest PROPERTY ENVIRONMENT
     "PROJECT_BINARY_DIR=${PROJECT_BINARY_DIR}"
