--- a/schemas/manifest.json
+++ b/schemas/manifest.json
@@ -1,7 +1,7 @@
 {
     "$schema": "http://json-schema.org/draft-07/schema#",
     "title": "RPM Package Manifest Schema",
-    "schemaVersion": "0.2.1",
+    "schemaVersion": "0.2.2",
     "description": "Schema for RPM manifest files used by libpkgmanifest library (https://github.com/rpm-software-management/libpkgmanifest)",
     "type": "object",
     "required": [
@@ -117,6 +117,13 @@
                                         "type": "string",
                                         "pattern": "^(.+):(.+)$",
                                         "description": "The modular information about the package in the format <name>:<stream>."
+                                    },
+                                    "parent_archs": {
+                                        "type": "array",
+                                        "description": "This optional field is used with noarch packages to indicate the base architectures the package was included for.",
+                                        "items": {
+                                            "type": "string"
+                                        }
                                     }
                                 }
                             }
