tests: Add check section to spec, simplify ctest

--- a/.github/workflows/build-and-tests.yml
+++ b/.github/workflows/build-and-tests.yml
@@ -25,4 +25,4 @@ jobs:
 
     - name: Tests
       working-directory: ${{ github.workspace }}/build
-      run: ctest -V --test-dir test
+      run: ctest -V
