--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,4 +32,6 @@ add_subdirectory("bindings")
 add_subdirectory("docs")
 add_subdirectory("include")
 add_subdirectory("src")
+
+enable_testing()
 add_subdirectory("test")
