Refactor NevraParser classes to share EVR splitting code
This splits out the code that parses the epoch:version-release
substring in a NEVRA (name-epoch:version-release.architecture) string
so that the EVR parsing is handled by librpm as well as being shared
in nevraparser.cpp.

Fixes: #34
Fixes: SWM-6446

Signed-off-by: David Cantrell <dcantrell@redhat.com>

--- a/.github/workflows/build-and-tests.yml
+++ b/.github/workflows/build-and-tests.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install Dependencies
-      run: sudo apt install libgmock-dev libgtest-dev libyaml-cpp-dev swig -y
+      run: sudo apt install libgmock-dev libgtest-dev libyaml-cpp-dev swig librpm-dev -y
 
     - name: Configure
       run: cmake -B build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
