--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,7 +13,12 @@ set_property(TARGET libpkgmanifest PROPERTY POSITION_INDEPENDENT_CODE ON)
 install(TARGETS libpkgmanifest LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR})
 
 list(APPEND libpkgmanifest_PC_REQUIRES_PRIVATE "${YAMLCPP_MODULE_NAME}")
-target_link_libraries(libpkgmanifest PRIVATE ${YAMLCPP_LIBRARIES})
+list(APPEND libpkgmanifest_PC_REQUIRES_PRIVATE "${RPM_MODULE_NAME}")
+
+target_link_libraries(libpkgmanifest PRIVATE
+    PkgConfig::YAMLCPP
+    PkgConfig::RPM)
+
 target_link_libraries(libpkgmanifest PUBLIC coverage_config)
 
 list(SORT libpkgmanifest_PC_REQUIRES)
