CI: Install librpm-dev for Code Coverage
Code Coverage workflow failed:

    -- Checking for module 'rpm'
    --   Package 'rpm', required by 'virtual:world', not found
    CMake Error at /usr/local/share/cmake-3.31/Modules/FindPkgConfig.cmake:645 (message):
      The following required packages were not found:

       - rpm

The cause was that no package with developmental files for RPM was installed.

--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -20,7 +20,7 @@ jobs:
         fetch-depth: 0
 
     - name: Install Dependencies
-      run: sudo apt install lcov libgmock-dev libgtest-dev libyaml-cpp-dev swig -y
+      run: sudo apt install lcov libgmock-dev librpm-dev libgtest-dev libyaml-cpp-dev swig -y
 
     - name: Configure
       run: cmake -B build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -DWITH_CODE_COVERAGE=ON
